RESOLVED FIXED236744
REGRESSION(r289580): [ iOS macOS ] TestWebKitAPI.IPCTestingAPI.CanReceiveSharedMemory is a constant timeout
https://bugs.webkit.org/show_bug.cgi?id=236744
Summary REGRESSION(r289580): [ iOS macOS ] TestWebKitAPI.IPCTestingAPI.CanReceiveShar...
Dawn Morningstar
Reported 2022-02-16 17:25:19 PST
TestWebKitAPI.IPCTestingAPI.CanReceiveSharedMemory Is a constant timeout on macOS and iOS15. HISTORY: https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.IPCTestingAPI.CanReceiveSharedMemory
Attachments
Patch (37.88 KB, patch)
2022-02-24 23:58 PST, Kimmo Kinnunen
ews-feeder: commit-queue-
Patch (39.85 KB, patch)
2022-02-25 00:20 PST, Kimmo Kinnunen
no flags
Patch (39.85 KB, patch)
2022-02-25 00:24 PST, Kimmo Kinnunen
no flags
Radar WebKit Bug Importer
Comment 1 2022-02-16 17:25:54 PST
Dawn Morningstar
Comment 2 2022-02-16 17:56:28 PST
Timeout was reproduced at Monterey Debug TOT using the following test: run-api-tests TestWebKitAPI.IPCTestingAPI.CanReceiveSharedMemory Timeout was also reproduced at r289580 but not r289579. Changes in r289580 likely caused this timeout. https://trac.webkit.org/changeset/289580/webkit
Ryan Haddad
Comment 3 2022-02-22 16:44:52 PST
Disabled test in r290340
Kimmo Kinnunen
Comment 4 2022-02-24 23:58:17 PST
Kimmo Kinnunen
Comment 5 2022-02-25 00:20:50 PST
Kimmo Kinnunen
Comment 6 2022-02-25 00:24:37 PST
Antti Koivisto
Comment 7 2022-02-25 05:02:22 PST
Comment on attachment 453182 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=453182&action=review > LayoutTests/ipc/stream-sync-reply-shared-memory.html:11 > + const streamTesterID = 447; Does this number have some significance?
Kimmo Kinnunen
Comment 8 2022-02-25 05:11:30 PST
(In reply to Antti Koivisto from comment #7) > > LayoutTests/ipc/stream-sync-reply-shared-memory.html:11 > > + const streamTesterID = 447; > > Does this number have some significance? No, the test just picks one.
EWS
Comment 9 2022-02-25 05:27:55 PST
Committed r290505 (247790@main): <https://commits.webkit.org/247790@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 453182 [details].
Note You need to log in before you can comment on or make changes to this bug.