Source/WebKit/Scripts/generate-unified-sources.sh
@@ -14,7 +14,7 @@ if [ -z "${BUILD_SCRIPTS_DIR}" ]; then
     fi
 fi
 
-UnifiedSourceCppFileCount=115
+UnifiedSourceCppFileCount=116
 UnifiedSourceMmFileCount=80
 
 if [ $# -eq 0 ]; then
